// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardItem /> Matches the Card Item Default snapshot 1`] = `
<article
  className="cardItem normal"
  typeof="sioc:Item foaf:Document"
>
  <figure
    className="image"
  >
    <a
      href="/"
    >
      <img
        alt="Placeholder Image"
        className="img"
        data-src="http://placehold.it/1920x1080.png"
        typeof="foaf:Image"
      />
    </a>
  </figure>
  <div
    className="titleWrap"
  >
    <h2
      className="title"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <p
    className="blurb"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Test Teaser",
        }
      }
    />
  </p>
</article>
`;

exports[`<CardItem /> Matches the Card Item Large snapshot 1`] = `
<article
  className="cardItem large"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap"
  >
    <h2
      className="title"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
</article>
`;

exports[`<CardItem /> Matches the Card Item No Link snapshot 1`] = `
<article
  className="cardItem freeform"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap"
  >
    <h2
      className="title"
    >
      <a
        className="link"
        href={null}
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
</article>
`;
